# LearnOpenGLTest

./: CMakeLists.txt  main.cpp
include/glad/: glad.h
libs/glad/: glad.c
src/: main.cpp
src/util/: GLError.h  GLProgram.h  GLShader.h  Window.cpp  Window.h
